--- a/src/Assignment-5/assignment5.html
+++ b/src/Assignment-5/assignment5.html
@@ -6,13 +6,31 @@
 	<meta http-equiv="Pragma" content="no-cache" />
 	<meta http-equiv="Expires" content="0" />
 	<script src="bundle.js" type="text/javascript"></script>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
 </head>
 
-<body>
-	<div id="container">
+<body style="background-color: rgb(233, 230, 230);">
+	<div id="container" >
 
 	<!-- Start your code from here -->
-	
+	<div class="card">
+		<section class="img-sec"><div class="imgdiv"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1145795/plant-1.png"></div></section>
+		<section class="text">
+			<h1>A leafy one</h1>
+			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos doloremque autem sed perspiciatis atque consequuntur. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum, magnam.
+			</p>
+			<div class="button">SO LEAFY</div>
+		</section>
+	</div>
+	<div class="card">
+		<section class="img-sec"><div class="imgdiv"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1145795/plant-4.png"></div></section>
+		<section class="text">
+			<h1>Some pointy ones</h1>
+			<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aperiam dolorem architecto animi pariatur impedit distinctio! Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, itaque!</p>
+			<div class="button">I'LL TAKE 10</div>
+		</section>
+		
+	</div>
 
 	<!-- End your code -->
 
